# MCP-Multi-Agent

./: DataAgent.py  RAG.py  README.md  client.py  langchain-chatbot.py  langgraph.ipynb  pyproject.toml  servers_config.json  weather_server.py  weather_server_test.py  write_server.py
faiss_db/: index.faiss  index.pkl
